# omnicalc

./: .gitignore  LICENSE  NOTICE.txt  README.md  fix_mlx_audio_ctc_bug.md  pyproject.toml  req.json  resp.json
omnicalc/: __init__.py  all_calc_schemas.json  api.py  asr.py  calculators.py  llm_client.py  models.py  orchestrator.py  prompts.py  tools.py
omnicalc/static/: app.js  index.html  styles.css
