[project]
name = "omnicalc"
version = "0.1.0"
description = "Voice-first clinical scoring agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "google-genai>=0.3.0",
    "numpy>=2.2.6",
    "sounddevice>=0.5.3",
    "ten-vad>=1.0.6.8",
    "transformers>=5.0.0rc3",
    "mlx>=0.30.3",
    "tiktoken>=0.12.0",
    "numba",
    "scipy",
    "librosa>=0.11.0",
    "miniaudio>=1.61",
    "pyloudnorm>=0.2.0",
    "huggingface_hub>=0.27.0",
    "torch",
    "mlx-audio",
    "sse-starlette>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
voice = [
    "transformers>=4.40.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "ten-vad>=0.1.0",
]
asr = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "librosa>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenticalc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
mlx-audio = { git = "https://github.com/Blaizzy/mlx-audio" }
